added welcome message

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>This is a paragraph on my website.</p>
+    <h1>Welcome to Calendar Assistant</h1>
+    <p>I here to help you plan and manage your tasks and schedules.</p>
+    <ul>
+        <li>Schedule a new event. </li>
+        <li>Add a deadline. </li>
+        <li>Plan you day today. </li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
